added url serializers to lower-case for routes and urls

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="isTopbar()">
     <app-navigation-bar></app-navigation-bar>
     <router-outlet></router-outlet>
-    <!-- <app-footer></app-footer> -->
+    <app-footer></app-footer>
 </div>
 <div *ngIf="isLogin()">
     <router-outlet></router-outlet>
