--- a/src/app/landing/landing-page/landing-page.component.html
+++ b/src/app/landing/landing-page/landing-page.component.html
@@ -1,5 +1,5 @@
-<div class="h-screen w-full flex items-center justify-center">
-    <app-hero-section></app-hero-section>
+<div class="h-screen w-full items-center justify-center">
+    <app-hero-section></app-hero-section>|
 </div>
 <app-offers-list [offersList]="offers"></app-offers-list>
 <app-promotions-list [promotionsList]="promotions"></app-promotions-list>
