--- a/src/app/navbar/side-bar/side-bar.component.html
+++ b/src/app/navbar/side-bar/side-bar.component.html
@@ -162,7 +162,7 @@
                     <feather-icon name="log-out" class="text-sm mr-2"></feather-icon>
                     <h1 class="text-sm font-bold" (click)="logout()">Log out</h1>
                 </div>
-            </nav>>
+            </nav>
         </div>
     </div>
 </section>
