--- a/src/app/about-us/categories/categories.component.html
+++ b/src/app/about-us/categories/categories.component.html
@@ -1,11 +1,11 @@
-<section class="mt-20">
-    <div class="flex justify-center ">
+<section class="mt-40">
+    <!-- <div class="flex justify-center ">
         <h1 class="p-4 font-sans text-gray-200 text-xl font-bold uppercase
         bg-red-700 hover:bg-red-800 hero-button font-sans text-left mx-8
         rounded-md transition-all duration-300 transform hover:scale-105 focus:scale-105">
             Top Categories
         </h1>
-    </div>
+    </div> -->
     <div class="m-16 -mb-3 bg-gray-100 w-80 rounded-md relative mx-auto">
         <h1 class="font-sans font-bold text-md text-red-600 uppercase text-center">
             Our services
