configurre robots.txt and sitemap.xml for seo

--- a/src/app/navbar/navigation-bar/navigation-bar.component.html
+++ b/src/app/navbar/navigation-bar/navigation-bar.component.html
@@ -81,9 +81,9 @@
         <li class="mx-8 my-5 lg:my-0 hover:drop-shadow-2xl transition-all duration-300 
                 transform hover:scale-110 focus:scale-105">
             <div class="text-lg hover:text-gray-950 duration-500"
-                [ngClass]="{'bg-red-500 text-white p-2 rounded-lg lg:w-full w-24': isActive('categories') }">
-                <a [routerLink]="['/categories']">
-                    Categories
+                [ngClass]="{'bg-red-500 text-white p-2 rounded-lg lg:w-full w-24': isActive('services') }">
+                <a [routerLink]="['/services']">
+                    Services
                 </a>
             </div>
         </li>
