--- a/src/app/categories/categories-hero/categories-hero.component.html
+++ b/src/app/categories/categories-hero/categories-hero.component.html
@@ -2,7 +2,7 @@
         <div class="hero-bg justify-center w-full lg:h-64 h-48 p-24 mt-5">
                 <h1 class="font-sans font-bold text-red-600 text-center w-full rounded-md uppercase
                  text-4xl cursor-pointer w-full">
-                        categories
+                        Services
                 </h1>
         </div>
 </section>
