changed destination for site.xml file, moved to src folder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,6 @@
 </div>
 <div *ngIf="!isSidebar() || !isSidebar() || !isLogin()">
     <app-navigation-bar></app-navigation-bar>
-    <!-- <router-outlet></router-outlet> -->
-    <!-- <app-footer></app-footer> -->
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
 </div>
