--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,5 +1,4 @@
-<div class="mt-20 text-4xl p-8 h-screen flex-col w-full ">
-    <h2 class="">
-        404 - Page Not Found</h2>
-    <p>The requested page does not exist.</p>
+<div class="mt-20  p-8 h-screen flex-col w-full ">
+    <h2 class="mb-10 text-4xl">404 - Page Not Found.</h2>
+    <p class="text-2xl">The requested page does not exist.</p>
 </div>
