--- a/src/app/trainer/trainer-details/trainer-details.component.html
+++ b/src/app/trainer/trainer-details/trainer-details.component.html
@@ -5,6 +5,9 @@
     <app-trainer-feature-videos [trainerFeatureVideo]="trainerFeatureVideo"></app-trainer-feature-videos>
     <app-trainer-photo-album></app-trainer-photo-album>
     <app-trainer-video-album></app-trainer-video-album>
+    <app-trainer-clients></app-trainer-clients>
     <app-trainer-review></app-trainer-review>
+    <app-trainer-testimonials></app-trainer-testimonials>
+    <app-trainer-subscriptions></app-trainer-subscriptions>
     <app-trainer-like></app-trainer-like>
 </div>
