--- a/src/app/trainer/trainer-introduction/trainer-introduction.component.html
+++ b/src/app/trainer/trainer-introduction/trainer-introduction.component.html
@@ -41,7 +41,7 @@
                     <div class="mx-auto p-2 w-full">
                         <span class="sr-only">Introduction</span>
                         <span class="ml-4 font-bold text-gray-600 italic">introduction</span>
-                        <textarea formControlName="introduction"
+                        <textarea formControlName="introduction" id="introduction"
                             class="w-full text-sm px-4 py-2 m-2 rounded-md bg-gray-200 focus:outline-none border-b-2 border-gray-400 hover:border-gray-500"
                             [ngClass]="{'border-red-400': updateTrainerIntroductionForm.get('introduction')?.invalid && updateTrainerIntroductionForm.get('introduction')?.dirty }"
                             placeholder="Please introduce yourself in a concise manner, using no more than 1000 words. Highlight your achievements, qualifications, and experience,
@@ -67,7 +67,7 @@
                                         onerror="this.src='../../../assets/icons/user.png';">
                                 </div>
                             </div>
-                            <input 
+                            <input  id="coverPhoto"
                                 class="border-b-2 px-4 py-2 rounded-md m-2 border-gray-400  hover:border-gray-400 focus:border-gray-400 focus:outline-none
                                  block w-full text-sm text-gray-950 font-bold cursor-pointer file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0
                                  file:text-sm file:font-semibold file:bg-gray-100 file:text-red-600 hover:file:bg-gray-200 file:cursor-pointer"
@@ -75,7 +75,7 @@
                                 (change)="onImgSelected($event)" type="file" accept="/image">
                         </div>
                         <div *ngIf="trainerIntroduction.coverPhoto" class="ml-4 font-bold text-gray-600 italic">
-                            <input type="checkbox" (change)="onCurrentPhotoSelected($event)" [checked]="isChecked">
+                            <input type="checkbox" (change)="onCurrentPhotoSelected($event)" [checked]="isChecked" id="currentPhoto" >
                             select current photo
                         </div>
                         <div *ngIf="updateTrainerIntroductionForm.get('coverPhoto')?.invalid && updateTrainerIntroductionForm.get('coverPhoto')?.dirty"
