--- a/src/app/trainer/trainer-video-album/trainer-video-album.component.html
+++ b/src/app/trainer/trainer-video-album/trainer-video-album.component.html
@@ -1,1 +1,63 @@
-<p>trainer-video-album works!</p>
+<div class="bg-gray-100 font-sans rounded-lg">
+    <div class="flex items-center justify-center">
+        <div class="bg-white p-6 mt-20 mb-10 lg-rounded">
+            <form [formGroup]="updateTrainerVideoAlbum">
+                <header class="justify-start p-2 text-gray-950 font-bold font-sans">
+                    <h1 class="text-xl text-red-600">Video Album
+                        <span *ngIf="!trainerFeatureVideo.id" class="text-sm mx-2 text-gray-700 italic">
+                            (action required)
+                        </span>
+                    </h1>
+                    <span class="text-md flex text-gray-700">
+                        Date registered: {{ trainerFeatureVideo.date ? formatDate(trainerFeatureVideo.date) : 'N/A' }}
+                    </span>
+                </header>
+                <div class="border-b-2"></div>
+                <div class="invalid-form">
+                    <span *ngIf="updateTrainerVideoAlbum.invalid && invalidForm" class="mx-2 text-red-600">
+                        Input fields cannot be empty
+                    </span>
+                    <span *ngIf="updateTrainerVideoAlbum.valid && invalidForm" class="mx-2 text-gray-600">
+                        Eerything's up to date
+                    </span>
+                </div>
+                <div class="flex-cols items-center justify-center gap-2 w-full p-2 text-gray-950">
+                    <div class="mx-auto ">
+                        <span class="sr-only">Photo 1</span>
+                        <span class="ml-4 font-bold text-gray-600 italic">Cover video</span>
+                        <div class="flex">
+                            <div class="shrink-0 group relative" *ngIf="trainerFeatureVideo.video">
+                                <!-- Thumbnail video with trainer name as aria-label and title -->
+                                <video class="h-16 w-16 object-cover rounded-full cursor-pointer"
+                                    [src]="trainerFeatureVideo.video"
+                                    onerror="this.src='../../../assets/icons/user.png';"
+                                    [attr.aria-label]="trainerFeatureVideo.trainer.name + ' feature video'"
+                                    [title]="trainerFeatureVideo.trainer.name + ' feature video'" [autoplay]="true"
+                                    [muted]="true">
+                                    <a href="trainerFeatureVideo.video"></a>
+                                </video>
+                            </div>
+                            <input id="videoUrl"
+                                class="border-b-2 px-4 py-2 rounded-md m-2 border-gray-400  hover:border-gray-400 focus:border-gray-400 focus:outline-none
+                                 block w-full text-sm text-gray-950 font-bold cursor-pointer file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0
+                                 file:text-sm file:font-semibold file:bg-gray-100 file:text-red-600 hover:file:bg-gray-200 file:cursor-pointer"
+                                [ngClass]="{'border-gray-950': updateTrainerVideoAlbum.get('video')?.invalid && updateTrainerVideoAlbum.get('video')?.dirty }"
+                                (change)="onVidSelected($event)" type="file" accept="/video">
+                        </div>
+                        <div *ngIf="updateTrainerVideoAlbum.get('video')?.invalid && updateTrainerVideoAlbum.get('video')?.dirty"
+                            class="text-red-500 mx-2">
+                            cover video is required
+                        </div>
+                    </div>
+                    <div class="">
+                        <button
+                            class="bg-red-600 rounded-md mx-auto m-2 col-span-2 py-1 px-2 font-bold font-sans mx-4 text-white text-sm lg:text-md flex items-center justify-center"
+                            type="submit" (click)="updateTrainerFeatureVideo()">
+                            save
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
